2003-07-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdrag.c: Gtk::Drag.begin, .get_target_list, .set_target_list.
	* src/rbgtktextview.c: Gtk::TextView#scroll_to_iter return true or false.

2003-07-29  Geoff Youngs  <g@intersect-uk.co.uk>

	* src/rbgdkevent.c: Use G_RENAME_CONSTANTS for [23]BUTTON_PRESS

2003-07-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdk.c: Add Gdk.set_x_error_handler, Gdk.set_x_io_error_handler.
	Suggested by Tom Felker.
	* extconf.rb: Check "X11/Xlib.h" 

2003-07-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkdisplay.c: Gdk::Display.new doesn't call 
	gdk_display_get_default. 

2003-07-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeviewcolumn.c: Fix G_DEF_CONSTANTS. Reported by Geoff Youngs.

2003-07-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkiconsize.c: Fix G_DEF_CONSTANTS.

2003-07-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktexttag.c: Add Gtk::TextTag#event. 

2003-07-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeview.c: Enhanced Gtk::TreeView#insert_column.
	* src/rbgtktreeviewcolumn.c: Gtk::TreeViewColumn#add_attribute 
	accept Symbol as a attribute.
	Add Gtk::TreeViewColumn#set_attributes.
	Remove Gtk::TreeViewColumn#cell_data_func=.

2003-07-20  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/*.c: use G_DEF_CONSTANTS() for defining enum/flags constants.

2003-07-18  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgtkclipboard.c (clipboard_set_text):
	* src/rbgtkimcontext.c (imcontext_set_surrounding):
	* src/rbgtkselectiondata.c (gtkselectiondata_set_text):
	* src/rbgtktextbuffer.c (txt_set_text, txt_insert,
	txt_insert_at_cursor, txt_insert_interactive,
	txt_insert_interactive_at_cursor, txt_insert_with_tags):
	should call StringValue() before using RSTRING().

	* src/rbgtkeditable.c (src/rbgtkeditable.c): use StringValue(new_text)
	instead of Check_Type(new_text, T_STRING).

2003-07-15  Masao Mutoh  <mutoh@highway.ne.jp>
