@@ -1,4 +1,4 @@
-# $Id: textview.rb,v 1.4 2003/05/04 03:49:58 mutoh Exp $
+# $Id: textview.rb,v 1.5 2003/07/30 17:26:31 mutoh Exp $
 =begin
 = Text Widget
 
@@ -20,14 +20,14 @@ module Demo
     def initialize
       super("TextView Window")
 
-      set_default_size (450, 450)
+      set_default_size(450, 450)
       
-      set_title ("TextView")
-      set_border_width (0)
+      set_title("TextView")
+      set_border_width(0)
 
       vpaned = Gtk::VPaned.new 
-      vpaned.set_border_width (5)
-      add (vpaned)
+      vpaned.set_border_width(5)
+      add(vpaned)
       ##
       # For convenience, we just use the autocreated buffer from
       # the first text view; you could also create the buffer
@@ -38,12 +38,12 @@ module Demo
       buffer = view1.buffer
       view2 = Gtk::TextView.new(buffer)
       
-      sw = Gtk::ScrolledWindow.new (nil, nil)
-      sw.set_policy (Gtk::POLICY_AUTOMATIC,
+      sw = Gtk::ScrolledWindow.new(nil, nil)
+      sw.set_policy(Gtk::POLICY_AUTOMATIC,
 		     Gtk::POLICY_AUTOMATIC)
       vpaned.add1(sw)
 
-      sw.add (view1)
+      sw.add(view1)
 
       sw = Gtk::ScrolledWindow.new(nil, nil)
       sw.set_policy(Gtk::POLICY_AUTOMATIC,
@@ -52,18 +52,18 @@ module Demo
 
       sw.add(view2)
 
-      create_tags (buffer)
-      insert_text (buffer)
+      create_tags(buffer)
+      insert_text(buffer)
 
-      attach_widgets (view1)
-      attach_widgets (view2)
+      attach_widgets(view1)
+      attach_widgets(view2)
       
       vpaned.show_all 
 
       self.show
     end
 
-    def create_tags (buffer)
+    def create_tags(buffer)
       ##
       #  Create a bunch of tags. Note that it's also possible to
       #  create tags with Gtk::TextTag.new then add them to the
@@ -85,8 +85,8 @@ module Demo
       #
 
       buffer.create_tag('heading',
-			{'weight' => (Pango::FontDescription::WEIGHT_BOLD),
-			  'size' => (15 * Pango::SCALE)})
+			{'weight' =>(Pango::FontDescription::WEIGHT_BOLD),
+			  'size' =>(15 * Pango::SCALE)})
       
       buffer.create_tag("italic",
 			{ "style" => Pango::FontDescription::STYLE_ITALIC})
@@ -163,13 +163,13 @@ module Demo
 			{"underline" => Pango::AttrUnderline::DOUBLE})
 
       buffer.create_tag( "superscript",
-			{"rise" => (10 * Pango::SCALE),	 #  10 pixels 
-			  "size" => (8 * Pango::SCALE)  #  8 points 
+			{"rise" =>(10 * Pango::SCALE),	 #  10 pixels 
+			  "size" =>(8 * Pango::SCALE)  #  8 points 
 			})
       
       buffer.create_tag( "subscript",
-			{"rise" => (-10 * Pango::SCALE),   #  10 pixels 
-			  "size" => (8 * Pango::SCALE)	  #  8 points 
+			{"rise" =>(-10 * Pango::SCALE),   #  10 pixels 
+			  "size" =>(8 * Pango::SCALE)	  #  8 points 
 			})
 
       buffer.create_tag( "rtl_quote",
@@ -181,7 +181,7 @@ module Demo
 			})
     end
 
-    def insert_text (buffer)
+    def insert_text(buffer)
 
       ##
       #  Demo.find_file looks in the the current directory first,
@@ -207,176 +207,176 @@ module Demo
 
       iter = buffer.get_iter_at_offset(0)
 
-      buffer.insert (iter, "The text widget can display text with all kinds of nifty attributes. It also supports multiple views of the same buffer; this demo is showing the same buffer in two places.\n\n")
+      buffer.insert(iter, "The text widget can display text with all kinds of nifty attributes. It also supports multiple views of the same buffer; this demo is showing the same buffer in two places.\n\n")
 
-      buffer.insert_with_tags (iter, "Font styles. ",
+      buffer.insert_with_tags(iter, "Font styles. ",
 			       'heading')
       
-      buffer.insert (iter, "For example, you can have ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, "For example, you can have ")
+      buffer.insert_with_tags(iter,
 			       "italic",
 			       "italic")
-      buffer.insert (iter, ", ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, ", ")
+      buffer.insert_with_tags(iter,
 			       "bold",
 			       "bold")
-      buffer.insert (iter, ", or ")
-      buffer.insert_with_tags (iter,
-			       "monospace (typewriter)",
+      buffer.insert(iter, ", or ")
+      buffer.insert_with_tags(iter,
+			       "monospace(typewriter)",
 			       "monospace")
-      buffer.insert (iter, ", or ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, ", or ")
+      buffer.insert_with_tags(iter,
 			       "big",
 			       "big")
-      buffer.insert (iter, " text. ")
-      buffer.insert (iter, "It's best not to hardcode specific text sizes; you can use relative sizes as with CSS, such as ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, " text. ")
+      buffer.insert(iter, "It's best not to hardcode specific text sizes; you can use relative sizes as with CSS, such as ")
+      buffer.insert_with_tags(iter,
 			       "xx-small",
 			       "xx-small")
-      buffer.insert (iter, " or ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, " or ")
+      buffer.insert_with_tags(iter,
 			       "x-large",
 			       "x-large")
-      buffer.insert (iter, " to ensure that your program properly adapts if the user changes the default font size.\n\n")
+      buffer.insert(iter, " to ensure that your program properly adapts if the user changes the default font size.\n\n")
       
-      buffer.insert_with_tags (iter, "Colors. ",
+      buffer.insert_with_tags(iter, "Colors. ",
 			       "heading")
       
-      buffer.insert (iter, "Colors such as ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, "Colors such as ")
+      buffer.insert_with_tags(iter,
 			       "a blue foreground",
 			       "blue_foreground")
-      buffer.insert (iter, " or ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, " or ")
+      buffer.insert_with_tags(iter,
 			       "a red background",
 			       "red_background")
-      buffer.insert (iter, " or even ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, " or even ")
+      buffer.insert_with_tags(iter,
 			       "a stippled red background",
 			       "red_background",
 				 "background_stipple")
 
-      buffer.insert (iter, " or ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, " or ")
+      buffer.insert_with_tags(iter,
 			       "a stippled blue foreground on solid red background",
 			       "blue_foreground",
 				 "red_background",
 				 "foreground_stipple")
 
-      buffer.insert (iter, " (select that to read it) can be used.\n\n")
+      buffer.insert(iter, "(select that to read it) can be used.\n\n")
 
-      buffer.insert_with_tags (iter, "Underline, strikethrough, and rise. ",
+      buffer.insert_with_tags(iter, "Underline, strikethrough, and rise. ",
 			       "heading")
       
-      buffer.insert_with_tags (iter,
+      buffer.insert_with_tags(iter,
 			       "Strikethrough",
 			       "strikethrough")
-      buffer.insert (iter, ", ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, ", ")
+      buffer.insert_with_tags(iter,
 			       "underline",
 			       "underline")
-      buffer.insert (iter, ", ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, ", ")
+      buffer.insert_with_tags(iter,
 			       "double underline",
 			       "double_underline")
-      buffer.insert (iter, ", ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, ", ")
+      buffer.insert_with_tags(iter,
 			       "superscript",
 			       "superscript")
-      buffer.insert (iter, ", and ")
-      buffer.insert_with_tags (iter,
+      buffer.insert(iter, ", and ")
+      buffer.insert_with_tags(iter,
 			       "subscript",
 			       "subscript")
-      buffer.insert (iter, " are all supported.\n\n")
+      buffer.insert(iter, " are all supported.\n\n")
 
-      buffer.insert_with_tags (iter, "Images. ",
+      buffer.insert_with_tags(iter, "Images. ",
 			       "heading")
       
-      buffer.insert (iter, "The buffer can have images in it: ")
-      buffer.insert_pixbuf (iter, pixbuf)
-      buffer.insert_pixbuf (iter, pixbuf)
-      buffer.insert_pixbuf (iter, pixbuf)
-      buffer.insert (iter, " for example.\n\n")
+      buffer.insert(iter, "The buffer can have images in it: ")
+      buffer.insert_pixbuf(iter, pixbuf)
+      buffer.insert_pixbuf(iter, pixbuf)
+      buffer.insert_pixbuf(iter, pixbuf)
+      buffer.insert(iter, " for example.\n\n")
 
-      buffer.insert_with_tags (iter, "Spacing. ",
+      buffer.insert_with_tags(iter, "Spacing. ",
 			       "heading")
 
-      buffer.insert (iter, "You can adjust the amount of space before each line.\n")
+      buffer.insert(iter, "You can adjust the amount of space before each line.\n")
       
-      buffer.insert_with_tags (iter,
+      buffer.insert_with_tags(iter,
 			       "This line has a whole lot of space before it.\n",
 			       "big_gap_before_line", "wide_margins")
-      buffer.insert_with_tags (iter,
+      buffer.insert_with_tags(iter,
 			       "You can also adjust the amount of space after each line; this line has a whole lot of space after it.\n",
 			       "big_gap_after_line", "wide_margins")
       
-      buffer.insert_with_tags (iter,
+      buffer.insert_with_tags(iter,
 			       "You can also adjust the amount of space between wrapped lines; this line has extra space between each wrapped line in the same paragraph. To show off wrapping, some filler text: the quick brown fox jumped over the lazy dog. Blah blah blah blah blah blah blah blah blah.\n",
 			       "double_spaced_line", "wide_margins")
 
-      buffer.insert (iter,
+      buffer.insert(iter,
 		     "Also note that those lines have extra-wide margins.\n\n")
 
-      buffer.insert_with_tags (iter, "Editability. ",
+      buffer.insert_with_tags(iter, "Editability. ",
 			       "heading")
       
-      buffer.insert_with_tags (iter,
+      buffer.insert_with_tags(iter,
 			       "This line is 'locked down' and can't be edited by the user - just try it! You can't delete this line.\n\n",
 			       "not_editable")
 
-      buffer.insert_with_tags (iter, "Wrapping. ", 
+      buffer.insert_with_tags(iter, "Wrapping. ", 
 			       "heading")
 
-      buffer.insert (iter,
-		     "This line (and most of the others in this buffer) is word-wrapped, using the proper Unicode algorithm. Word wrap should work in all scripts and languages that GTK+ supports. Let's make this a long paragraph to demonstrate: blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah\n\n")
+      buffer.insert(iter,
+		     "This line(and most of the others in this buffer) is word-wrapped, using the proper Unicode algorithm. Word wrap should work in all scripts and languages that GTK+ supports. Let's make this a long paragraph to demonstrate: blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah\n\n")
       
-      buffer.insert_with_tags (iter,
+      buffer.insert_with_tags(iter,
 			       "This line has character-based wrapping, and can wrap between any two character glyphs. Let's make this a long paragraph to demonstrate: blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah\n\n",
 			       "char_wrap")
       
-      buffer.insert_with_tags (iter,
+      buffer.insert_with_tags(iter,
 			       "This line has all wrapping turned off, so it makes the horizontal scrollbar appear.\n\n\n",
 			       "no_wrap")
 
-      buffer.insert_with_tags (iter, "Justification. ",
+      buffer.insert_with_tags(iter, "Justification. ",
 			       "heading")
       
-      buffer.insert_with_tags (iter,
+      buffer.insert_with_tags(iter,
 			       "\nThis line has center justification.\n",
 			       "center")
 
-      buffer.insert_with_tags (iter,
+      buffer.insert_with_tags(iter,
 			       "This line has right justification.\n",
 			       "right_justify")
 
-      buffer.insert_with_tags (iter,
+      buffer.insert_with_tags(iter,
 			       "\nThis line has big wide margins. Text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text.\n",
 			       "wide_margins")
 
-      buffer.insert_with_tags (iter, "Internationalization. ",
+      buffer.insert_with_tags(iter, "Internationalization. ",
 			       "heading")
 
-      buffer.insert (iter,
-		     "You can put all sorts of Unicode text in the buffer.\n\nGerman (Deutsch Süd) Grüß Gott\nGreek (Ελληνικά) Γειά σας\nHebrew	שלום\nJapanese (日本語)\n\nThe widget properly handles bidirectional text, word wrapping, DOS/UNIX/Unicode paragraph separators, grapheme boundaries, and so on using the Pango internationalization framework.\n")
+      buffer.insert(iter,
+		     "You can put all sorts of Unicode text in the buffer.\n\nGerman(Deutsch Süd) Grüß Gott\nGreek(Ελληνικά) Γειά σας\nHebrew	שלום\nJapanese(日本語)\n\nThe widget properly handles bidirectional text, word wrapping, DOS/UNIX/Unicode paragraph separators, grapheme boundaries, and so on using the Pango internationalization framework.\n")
 
-      buffer.insert (iter, "Here's a word-wrapped quote in a right-to-left language:\n")
-      buffer.insert_with_tags (iter, "وقد بدأ ثلاث من أكثر المؤسسات تقدما في شبكة اكسيون برامجها كمنظمات لا تسعى للربح، ثم تحولت في السنوات الخمس الماضية إلى مؤسسات مالية منظمة، وباتت جزءا من النظام المالي في بلدانها، ولكنها تتخصص في خدمة قطاع المشروعات الصغيرة. وأحد أكثر هذه المؤسسات نجاحا هو »بانكوسول« في بوليفيا.\n\n",
+      buffer.insert(iter, "Here's a word-wrapped quote in a right-to-left language:\n")
+      buffer.insert_with_tags(iter, "وقد بدأ ثلاث من أكثر المؤسسات تقدما في شبكة اكسيون برامجها كمنظمات لا تسعى للربح، ثم تحولت في السنوات الخمس الماضية إلى مؤسسات مالية منظمة، وباتت جزءا من النظام المالي في بلدانها، ولكنها تتخصص في خدمة قطاع المشروعات الصغيرة. وأحد أكثر هذه المؤسسات نجاحا هو »بانكوسول« في بوليفيا.\n\n",
 
 			       "rtl_quote")
       
-      buffer.insert (iter, "You can put widgets in the buffer: Here's a button: ")
-      anchor = buffer.create_child_anchor (iter)
-      buffer.insert (iter, " and a menu: ")
-      anchor = buffer.create_child_anchor (iter)
-      buffer.insert (iter, " and a scale: ")
-      anchor = buffer.create_child_anchor (iter)
-      buffer.insert (iter, " and an animation: ")
-      anchor = buffer.create_child_anchor (iter)
-      buffer.insert (iter, " finally a text entry: ")
-      anchor = buffer.create_child_anchor (iter)
-      buffer.insert (iter, ".\n")
+      buffer.insert(iter, "You can put widgets in the buffer: Here's a button: ")
+      anchor = buffer.create_child_anchor(iter)
+      buffer.insert(iter, " and a menu: ")
+      anchor = buffer.create_child_anchor(iter)
+      buffer.insert(iter, " and a scale: ")
+      anchor = buffer.create_child_anchor(iter)
+      buffer.insert(iter, " and an animation: ")
+      anchor = buffer.create_child_anchor(iter)
+      buffer.insert(iter, " finally a text entry: ")
+      anchor = buffer.create_child_anchor(iter)
+      buffer.insert(iter, ".\n")
       
-      buffer.insert (iter, "\n\nThis demo doesn't demonstrate all the Gtk::TextBuffer features; it leaves out, for example: invisible/hidden text (doesn't work in GTK 2, but planned), tab stops, application-drawn areas on the sides of the widget for displaying breakpoints and such...")
+      buffer.insert(iter, "\n\nThis demo doesn't demonstrate all the Gtk::TextBuffer features; it leaves out, for example: invisible/hidden text(doesn't work in GTK 2, but planned), tab stops, application-drawn areas on the sides of the widget for displaying breakpoints and such...")
 
       #  Apply word_wrap tag to whole buffer 
 
@@ -384,26 +384,26 @@ module Demo
       buffer.apply_tag("word_wrap", buf_start, buf_end)
     end
 
-    def find_anchor (iter)
+    def find_anchor(iter)
       while iter.forward_char do
         return true if iter.child_anchor
       end
       return false
     end
 
-    def attach_widgets (text_view)
+    def attach_widgets(text_view)
   
       buffer = text_view.buffer;
 
       iter = buffer.start_iter
 
       i = 0;
-      while find_anchor (iter) do
+      while find_anchor(iter) do
 	anchor = iter.child_anchor
 
 	if  i == 0 
 	  widget = Gtk::Button.new("Click Me")
-	widget.signal_connect ('clicked') { |button|
+	widget.signal_connect('clicked') { |button|
 	    if @@nest_window and ! @@nest_window.destroyed?
 	      @@nest_window.present
 	      break
@@ -412,25 +412,25 @@ module Demo
 	    buffer = Gtk::TextBuffer.new
 	    iter = buffer.start_iter
 
-	    buffer.insert (iter,
+	    buffer.insert(iter,
 			   "This buffer is shared by a set of nested text views.\n Nested view:\n")
 	    anchor = buffer.create_child_anchor(iter)
-	    buffer.insert (iter,
+	    buffer.insert(iter,
 			   "\nDon't do this in real applications, please.\n")
 
 	    view = Gtk::TextView.new(buffer)
   
-	    recursive_attach_view (0, view, anchor)
+	    recursive_attach_view(0, view, anchor)
   
 	    @@nest_window = Gtk::Window.new(Gtk::Window::TOPLEVEL)
 	    sw = Gtk::ScrolledWindow.new(nil, nil)
-	    sw.set_policy (Gtk::POLICY_AUTOMATIC,
+	    sw.set_policy(Gtk::POLICY_AUTOMATIC,
 			   Gtk::POLICY_AUTOMATIC)
 
 	    @@nest_window.add(sw)
 	    sw.add(view)
 
-	    @@nest_window.set_default_size (300, 400)
+	    @@nest_window.set_default_size(300, 400)
 	    @@nest_window.show_all
 	  }
 	elsif i == 1
@@ -448,11 +448,11 @@ module Demo
 
 	elsif i == 2
 	  widget = Gtk::HScale.new
-          widget.set_range (0, 100)
-          widget.set_size_request (70, -1)
+          widget.set_range(0, 100)
+          widget.set_size_request(70, -1)
 
 	elsif i == 3
-	  filename = Demo.find_file ("floppybuddy.gif")
+	  filename = Demo.find_file("floppybuddy.gif")
 	  widget = Gtk::Image.new(filename)
 
 	elsif i == 4
@@ -463,7 +463,7 @@ module Demo
 	  #g_assert_not_reached ;
 	end
 
-	text_view.add_child_at_anchor (widget,
+	text_view.add_child_at_anchor(widget,
 				       anchor)
 
 	widget.show_all 
@@ -472,25 +472,25 @@ module Demo
     end
 
 
-    def recursive_attach_view (depth, view, anchor)
+    def recursive_attach_view(depth, view, anchor)
       return  if depth > 4
 
       child_view = Gtk::TextView.new(view.buffer)
 
       #  Event box is to add a black border around each child view 
       event_box = Gtk::EventBox.new
-      color = Gdk::Color.parse ("black")
+      color = Gdk::Color.parse("black")
       event_box.modify_bg(Gtk::STATE_NORMAL, color)
 
       align = Gtk::Alignment.new(0.5, 0.5, 1.0, 1.0)
-      align.set_border_width (1)
+      align.set_border_width(1)
   
       event_box.add(align)
       align.add(child_view)
   
-      view.add_child_at_anchor (event_box, anchor)
+      view.add_child_at_anchor(event_box, anchor)
 
-      recursive_attach_view (depth + 1, child_view, anchor)
+      recursive_attach_view(depth + 1, child_view, anchor)
     end
 
   end
