@@ -3,8 +3,8 @@
 
   rbgtkmessagedialog.c -
 
-  $Author: sakai $
-  $Date: 2003/07/20 05:05:08 $
+  $Author: mutoh $
+  $Date: 2003/07/30 17:26:32 $
 
   Copyright (C) 2002,2003 Masao Mutoh
 ************************************************/
@@ -37,7 +37,7 @@ Init_gtk_message_dialog()
     rb_define_method(gMessageDialog, "initialize", mdiag_initialize, -1);
 
     /* GtkMessageType */
-    G_DEF_CONSTANTS(gMessageDialog, GTK_TYPE_MESSAGE_TYPE, "GTK_");
+    G_DEF_CONSTANTS(gMessageDialog, GTK_TYPE_MESSAGE_TYPE, "GTK_MESSAGE_");
 
     /* GtkButtonsType */
     G_DEF_CONSTANTS(gMessageDialog, GTK_TYPE_BUTTONS_TYPE, "GTK_");
